--- a/ch5part1.ipynb
+++ b/ch5part1.ipynb
@@ -942,6 +942,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "collapsed": true,
         "id": "wcrEyxgTX9Ti"
       },
       "outputs": [],
@@ -963,14 +964,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
-        "id": "njJh9zzQX9Tj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "njJh9zzQX9Tj",
+        "outputId": "5a2fa70b-2d7d-4de3-ce8c-a426c6052b0d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Before call myfunction1 100\n",
+            "After call myfunction1 101\n"
+          ]
+        }
+      ],
       "source": [
-        "# Fix the errors and show the complete code here\n"
+        "gvar = 100\n",
+        "\n",
+        "def myfunction1():\n",
+        "    global gvar #declare gvar as global to modify the global variable\n",
+        "    gvar += 1 # Increment the global varibale\n",
+        "\n",
+        "def main():\n",
+        "    global gvar #this is also a good practice, although not necessary here\n",
+        "    print('Before call myfunction1', gvar)\n",
+        "    myfunction1()\n",
+        "    print('After call myfunction1', gvar)\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "  main()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The error you get is an UnboundLocalError because when you attempt to execute gvar += 1 in myfunction() python gvar to be a local variable but it hasnt been assigned a value within that function scope."
+      ],
+      "metadata": {
+        "id": "sW0OCCL94YX4"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1099,7 +1135,7 @@
         "id": "e7B_1iv2X9Tk"
       },
       "source": [
-        "#### <mark> Type your answer here </mark>\n",
+        "#### <mark> Values will be tuple containing the three integers: (10, 20, 30) </mark>\n",
         "- What is the data type of values in the function ?"
       ]
     },
@@ -1157,7 +1193,7 @@
         "id": "MZ9zF4nxX9Tk"
       },
       "source": [
-        "#### <mark> Type your answer here </mark>\n",
+        "#### <mark>The datat type in main() is class lisy while thr data type printed in myfunction() is class tuple this is because args in the function definition collects all positional arguments passed to the function into a tuple. There is 1 element in the tuple args which is the entire list of values passed from main(). The data type of the element in the tuple args is class list because it contains the list values. The list values contains 3 elements [10, 20, 30]. For the loop in myfunction() will perform 1 iteration because when myfunction is called with values it is passed as a single argument due to the unpacking if args. so args will contain a single tuple element, which is the list itself leading to one iteration over that single element.</mark>\n",
         "\n",
         "### Are the two printed data types same?\n",
         "\n",
@@ -1226,7 +1262,7 @@
         "id": "WBbhrcvaX9Tl"
       },
       "source": [
-        "#### <mark> Type your answer here </mark>\n",
+        "#### <mark> the function myfunction(*values) collects arguments into a tuple, printing its type as <class 'tuple'> for both calls. when called with a list, it treats the list as a single element resulting in one iteration while calling it with individual values results in three iterations, which reflects the numhber of elements passed. </mark>\n",
         "\n",
         "### Are the two printed data types same?\n",
         "\n",
@@ -1278,7 +1314,7 @@
         "id": "v3LBQVLHX9Tl"
       },
       "source": [
-        "#### <mark> Type your answer here </mark>\n",
+        "#### <mark> No myfn1 prints a tuple, while myfn2 prints a list. And yes the printed values are the same (10, 20, 30) when correctly calling myfn1 woth unpacked arguemnts. </mark>\n",
         "\n",
         "### Are the two printed data types same?\n",
         "\n",
@@ -1299,11 +1335,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
-        "id": "tDKx0-jlX9Tl"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tDKx0-jlX9Tl",
+        "outputId": "383e7a3b-642b-49df-f81f-1e8a2cb936ef"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10, 20, 30]\n",
+            "10 20 30\n"
+          ]
+        }
+      ],
       "source": [
         "# check out the difference between two print statements\n",
         "numbers = [10, 20, 30]\n",
@@ -1352,7 +1401,7 @@
         "id": "gzxgup6gX9Tm"
       },
       "source": [
-        "#### <mark> Type your answer here </mark>\n",
+        "#### <mark> The two functions produce different printed outputs and formats, although the values themselves are the same. it is not possible to call myfn1(numbers) directly without unpacking but you can call myfn2(*numbers) and it will work though it will still treat the inputs as a single iterable </mark>\n",
         "\n",
         "### Are the two printed output same?\n",
         "\n",
@@ -1413,11 +1462,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
-        "id": "-PIo3uQiX9Tm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-PIo3uQiX9Tm",
+        "outputId": "66e49536-4c8a-40d3-edd4-35a9bbfd57b5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'dict'> The type of kwargs\n",
+            "True <--- If this is true, kwargs is a dictionary \n",
+            "first -> California\n",
+            "mid -> Community\n",
+            "last -> College\n"
+          ]
+        }
+      ],
       "source": [
         "def myFun(**kwargs):\n",
         "\tprint (type(kwargs), 'The type of kwargs')\n",
@@ -1428,6 +1493,17 @@
         "\n",
         "myFun(first ='California', mid ='Community', last='College')\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kwargs is a dictionary and insinstance(kwargs, dict) is true"
+      ],
+      "metadata": {
+        "id": "XL9JzpKWvF-K"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1469,17 +1545,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
-        "id": "MEUA-mDxX9Tn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MEUA-mDxX9Tn",
+        "outputId": "ead2eb06-b190-4b7f-a7dd-ab1e098218d2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mid -> community\n",
+            "last -> College\n",
+            "first -> california\n"
+          ]
+        }
+      ],
       "source": [
         "def myFun(**kwargs):\n",
         "\tfor key, value in kwargs.items():\n",
         "\t\tprint (\"%s -> %s\" %(key, value))\n",
         "\n",
-        "myFun( # Complete yout code )\n"
+        "myFun(mid='community', last= 'College', first='california')\n"
       ]
     },
     {
@@ -1488,10 +1578,10 @@
         "id": "qzEjkKLaX9Tn"
       },
       "source": [
-        "#### <mark> Type your answer here </mark>\n",
-        "-\n",
-        "-\n",
-        "-\n",
+        "#### <mark> The output is printed from the \"mid\" key value first followed by the last and then the first key values  </mark>\n",
+        "- community\n",
+        "- college\n",
+        "- California\n",
         "***"
       ]
     },
@@ -1509,11 +1599,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
-        "id": "lCNjjkbhX9Tn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lCNjjkbhX9Tn",
+        "outputId": "0b9a2f14-9be6-455a-a4a3-590df1cadb9d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Apple\n",
+            "mid -> Pear\n",
+            "last -> Orange\n",
+            "Apple\n",
+            "mid -> Pear\n",
+            "last -> Orange\n"
+          ]
+        }
+      ],
       "source": [
         "def myFun(first, **kwargs):\n",
         "\tprint (first)\n",
@@ -1551,7 +1658,7 @@
         "\tkwargs = {\"arg1\" : \"Java\", \"arg2\" : \"C++\", \"arg3\" : \"Python\"}\n",
         "\tmyFun(**kwargs)\n",
         "```\n",
-        "#### And explain the output. All outputs are same?\n"
+        "#### And explain the output. All outputs are same? yes they are all the same the reason is that regardless of how the arguments are passed whether the vakues are the same and correctly mapped to the parameters of the function\n"
       ]
     },
     {
@@ -1606,7 +1713,7 @@
         "id": "lLWM_NVFX9Tn"
       },
       "source": [
-        "#### <mark> Type your answer here </mark>\n",
+        "#### <mark> All outputs are the same output because they all pass the same values for the parameters. The function def does not depend on how the arguments are passed it just processes the values it receives. which is why the output will remain constant. </mark>\n",
         "\n",
         "### All the output are same? Why? Explain it.\n",
         "-\n",
@@ -1648,11 +1755,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
-        "id": "zelUPKL8X9To"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zelUPKL8X9To",
+        "outputId": "894143cc-ebe3-4f34-9de5-9fe5758703f5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "6\n",
+            "[4]\n"
+          ]
+        }
+      ],
       "source": [
         "def retEven(lst):\n",
         "\tevenlst = []\n",
@@ -1693,15 +1814,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "Du2UBPl6X9To",
-        "outputId": "084ed137-4bb5-47d9-d618-1ae09693f615"
+        "outputId": "ad3d5efb-9fb9-41d5-d399-0e02e875333c"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "('Python Programming',)\n",
             "The value v is  Python Programming \tThe type of v is  <class 'str'>\n",
@@ -1850,7 +1974,7 @@
       },
       "source": [
         "#### What is the type of \"myiter\"?\n",
-        "- Your answer: 👉"
+        "- Your answer: 👉 the type of myiter it will return is <class 'list_iterator'>"
       ]
     },
     {
@@ -1875,7 +1999,7 @@
       "source": [
         "#### What is the result of the following code?\n",
         "``` myiter.__next__() ```\n",
-        "- Your answer: Here 👉"
+        "- Your answer: Here 👉 it will return the first element of the iterator myiter, which was created from the list mylst = [10, 20, 30]"
       ]
     },
     {
@@ -1900,7 +2024,7 @@
         "    myiter.__next__()  \n",
         "    myiter.__next__()\n",
         "```\n",
-        "- Your answer: Here 👉"
+        "- Your answer: Here 👉 you will get a name error because myliter would not be recognized"
       ]
     },
     {
@@ -1925,16 +2049,33 @@
         "```\n",
         "    myiter.__next__()  \n",
         "```\n",
-        "- Your answer: Here  👉"
+        "- Your answer: Here  👉 the codes error is caused becauuse it raised to indicate that the iterator has been exhausted"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
-        "id": "2ubYL1DUX9Tp"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "id": "2ubYL1DUX9Tp",
+        "outputId": "c126261c-6331-4409-e848-fe7acab4ee2d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "StopIteration",
+          "evalue": "",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-36-279da4cfd673>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mmyiter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__next__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mStopIteration\u001b[0m: "
+          ]
+        }
+      ],
       "source": [
         "print (myiter.__next__())"
       ]
@@ -1954,11 +2095,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
-        "id": "Xbk7B0jWX9Tq"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xbk7B0jWX9Tq",
+        "outputId": "e52517f4-af58-4adf-f917-df11e97aff65"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n"
+          ]
+        }
+      ],
       "source": [
         "mylst = [1,2,3]\n",
         "itobj= iter(mylst)\n",
@@ -2025,15 +2180,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "HnJ8Zj7DX9Tq",
-        "outputId": "6bee0ff6-8503-47da-d793-54ba15ff7236"
+        "outputId": "171c2324-7479-48b7-ca57-b411e8156d2f"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "10\t20\t30\t"
           ]
@@ -2071,15 +2229,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "dwJnfXdRX9Tq",
-        "outputId": "e94b3062-1f7b-41c9-c490-5e408311e122"
+        "outputId": "d5905641-d4c0-43d2-f60c-4045c6f350e4"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "10\t20\t30\t"
           ]
@@ -2102,7 +2263,7 @@
       },
       "source": [
         "### Compare two loop structures. What is the difference between two loops to use the iterator for traversing all the elements in the list?\n",
-        "#### Your Answer: Here 👉"
+        "#### Your Answer: Here 👉  When comparing two loop structures for traversing elements in a list the two most common approaches are using a for loop and a while loop with interator"
       ]
     },
     {
