--- a/ch5part1.ipynb
+++ b/ch5part1.ipynb
@@ -682,11 +682,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
-        "id": "H7GpZyIvX9Th"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H7GpZyIvX9Th",
+        "outputId": "8a4956ec-1025-4404-f6fb-433d079f0126"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The first parameter n1 is 200\n",
+            "The second parameter n2 is 100\n",
+            "The total is 300\n",
+            "The value of total is 300\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "def getsum(n1, n2):\n",
@@ -720,24 +735,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {
-        "id": "vMLLCAx0X9Th"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vMLLCAx0X9Th",
+        "outputId": "59b7cfc2-8a4e-4faf-e0e0-fbbdde1e48f2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[100, 200, 300]\n"
+          ]
+        }
+      ],
       "source": [
         "def setListValues(first_element, second_element, third_element):\n",
-        "    mylst=[]\n",
-        "    mylst.append(first_element)\n",
-        "    mylst.append(second_element)\n",
-        "    mylst.append(third_element)\n",
+        "    mylst=[] #Create a local list\n",
+        "    mylst.append(first_element) #Append the first element\n",
+        "    mylst.append(second_element) #Append the second element\n",
+        "    mylst.append(third_element) #Append the third element\n",
+        "    return mylst # Return the list\n",
         "\n",
         "def main():\n",
-        "    setListValues(third_element= #complete value,\n",
-        "                  second_element= # complete value,\n",
-        "                  first_element= # complete value )\n",
-        "            )\n",
-        "    print(mylst)\n",
+        "    #call setlistvalues with actual values 100, 200, and 300\n",
+        "    my_list = setListValues(first_element=100,\n",
+        "                  second_element=200,\n",
+        "                  third_element=300)\n",
+        "    print(my_list)  # print the returned list\n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()\n",
@@ -809,11 +837,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
-        "id": "2D7KxH4hX9Ti"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2D7KxH4hX9Ti",
+        "outputId": "ff7b4a08-a531-4338-a85f-0b7ad4d180a0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Before call myfunction1  100\n",
+            "Inside the function  111\n",
+            "After call myfunction1  111\n"
+          ]
+        }
+      ],
       "source": [
         "gvar = 100\n",
         "\n",
@@ -883,6 +925,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "the code initializews a global variable gvar to 100. in the main function it first prints gvar, calls myfunction1 and then prints the updated value. finally gvar is incremented again in main, resulting in a final value of 102 The printed outputs show the changes to gvar at each step"
+      ],
+      "metadata": {
+        "id": "V5wHtkYp7DL_"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "ebfN3ow4X9Ti"
       },
@@ -925,6 +976,15 @@
         "if __name__ == '__main__':\n",
         "\tmain()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "in the code the reason why the printed value of gvar remains 100 even after it has been increased by 1 within the myfunction() function is due to the concept of variable scope in python"
+      ],
+      "metadata": {
+        "id": "gbwdQSTc6LXa"
+      }
     },
     {
       "cell_type": "markdown",
