--- a/ch5part1.ipynb
+++ b/ch5part1.ipynb
@@ -95,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
         "id": "G7GB6DJYX9Tb"
       },
@@ -111,11 +111,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {
-        "id": "FZSAzIeoX9Tc"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FZSAzIeoX9Tc",
+        "outputId": "c7d29d50-348b-4ce3-a727-79bb06e9aeef"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ]
+        }
+      ],
       "source": [
         "# Function to return 0 or 1\n",
         "# if the number is even, return 0, otherwise 1\n",
@@ -261,13 +273,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {
-        "id": "HPco0JbtX9Td"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HPco0JbtX9Td",
+        "outputId": "44dc02d7-9772-4556-e106-c9d92dbc6551"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter an integer: 42\n",
+            "42\n"
+          ]
+        }
+      ],
       "source": [
-        "# complete the code to run the main function\n"
+        "def get_input():\n",
+        "    while True: #keep asking for input until a valid integer is provided\n",
+        "      try:\n",
+        "        val = int(input(\"Enter an integer: \")) #prompt the user for input\n",
+        "        return val\n",
+        "      except ValueError: #handle the case where the input is not an integer\n",
+        "          print(\"invalid input. Please enter a valid integer\")\n",
+        "\n",
+        "def main():\n",
+        "    user_val = get_input() #get user input\n",
+        "    print(user_val) #print the user input\n",
+        "\n",
+        "if __name__ == \"__main__\": #ensure this runs omly if the script is executed directly\n",
+        "    main()\n"
       ]
     },
     {
@@ -315,6 +353,15 @@
         "userval = getinput()\n",
         "print (userval)\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "its possible to run without a main() mfunction because the absence of the function in python doesnt prevent the code from executing"
+      ],
+      "metadata": {
+        "id": "l8akLffgFX3Q"
+      }
     },
     {
       "cell_type": "markdown",
@@ -449,7 +496,7 @@
         "id": "67nzOHg4X9Tf"
       },
       "source": [
-        "### <mark> Explain why both values are 0 </mark>\n",
+        "### <mark> Explain why both values are 0. Both balues of a and b remain 0 after the getinput function is called. </mark>\n",
         "\n",
         "- You can use this markdown box to answer to the question"
       ]
@@ -517,7 +564,7 @@
         "id": "MFw2haCJX9Tf"
       },
       "source": [
-        "## Answer the question 2.2 here\n",
+        "## Answer the question 2.2 here The changed that were made to the list inside getinput() affect the list in main() because list in python are mutable objects and are passed by reference. therefore, any modifications to the list in the getinput() function directly motify list1 in the main() function\n",
         "- You can use Markdown syntax to make the MarkDown Text"
       ]
     },
@@ -554,11 +601,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 59,
       "metadata": {
-        "id": "5AerwnpQX9Tg"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5AerwnpQX9Tg",
+        "outputId": "58f10e20-5447-43ce-fe48-c0e9ab1e4d7f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "The value of num1 and num2 are 0 and 1\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "def getinput():\n",
@@ -580,7 +641,7 @@
         "id": "o3Kdg1SkX9Tg"
       },
       "source": [
-        "## Answer the question 2.3 here\n",
+        "## Answer the question 2.3 here Yes the function can return multiple values as the getinput() function returns two values val1 and val2 as a tuple\n",
         "- You can use Markdown syntax to make the MarkDown Text"
       ]
     },
@@ -600,22 +661,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 58,
       "metadata": {
-        "id": "mKBsuNYmX9Tg"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mKBsuNYmX9Tg",
+        "outputId": "89d7abf7-d6fe-417c-ff13-4b060a3347c1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total is 30\n"
+          ]
+        }
+      ],
       "source": [
         "def getsum(n1, n2):\n",
         "    total = n1 + n2\n",
-        "    print(f'Total is {total}')\n",
+        "    return total # return the total instead of printing it\n",
         "\n",
         "def main():\n",
-        "    total = 0\n",
         "    num1 = 10\n",
         "    num2 = 20\n",
-        "    getsum(num1, num2)\n",
-        "    print(f'Total is {total}')\n",
+        "    total = getsum(num1, num2) #capture the return value of getsum\n",
+        "    print(f'Total is {total}') #now this will print the correct total\n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()"
@@ -627,7 +699,7 @@
         "id": "IElkbwQgX9Tg"
       },
       "source": [
-        "## Answer the question 2.4 here\n",
+        "## Answer the question 2.4 here. The total variable in getsum() is local and cannot be acessed in main(), which leads to printing 0 instead of the correct sum. to fix this modify getsum() to return the total, and then capture that return value in main(). this way you can print the correct total from getsum() in main()\n",
         "- You can use Markdown syntax to make the MarkDown Text"
       ]
     },
